Bump mockito version.