@@ -139,7 +139,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
               <argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+              <argLine>--add-opens=java.base/java.time=ALL-UNNAMED</argLine>
             </configuration>
           </plugin>
         </plugins>
